# git-a-life

./: .gitignore  Makefile  README.md  pyproject.toml
src/alife/: cli.py  diary.py
tests/: test_diary.py
