[tool.poetry]
name = "alife"
version = "0.1.0"
description = "Git a Life"
authors = ["Bijay Gurung <bijay.learning@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
