[tool.poetry]
name = "alife"
version = "0.1.0"
description = "Git a Life"
authors = ["Bijay Gurung <bijay.learning@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
GitPython = "^3.1.18"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.6b0"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
